feat(theme): bundle local utec-disruption-theme and fix theme path for deployment

--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "typescript": "^5.0.0"
   },
   "slidev": {
-    "theme": "utec-disruption-theme"
+  "theme": "./themes/utec-disruption-theme"
   }
 }
